<resources>
    <string name="app_name">TraffSkip</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="login_register">Log In / Register</string>
    <string name="create_account_text">Create a new account</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="button_create_account">Register</string>
    <string name="button_to_login">Have an Account? Log in</string>
    <string name="login_text">Account login</string>
    <string name="button_to_create_account">Create a new account</string>
    <string name="logout_register">Sign Out</string>
    <string name="location_name">Location Name</string>
    <!--
    <string name="title_activity_main3">Main3Activity</string>
    -->
</resources>
